Change min container height to stop overflow

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     height: 90vh;
     max-width: 100rem;
     min-width: 50rem;
-    min-height: 35rem;
+    min-height: 60rem;
 }
 
 #left,
